# ai-terraform-qa-action

./: .gitignore  Dockerfile  README.md  action.yaml  index.js  logs.txt  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yaml  test-action.yaml
src/: main.py
terraform/environments/test/: outputs.tf
terraform/shared/iam-oidc/: main.tf  terraform.tfstate
test/infra/: main.tf  variables.tf
