[project]
name = "heimdall"
version = "0.1.0"
description = ""
authors = [{ name = "Aaryan Shroff", email = "aaryan.shroff@uwaterloo.ca" }]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = ["tabulate (>=0.9.0,<0.10.0)", "langchain (>=0.3.24,<0.4.0)", "langchain-google-genai (>=2.1.3,<3.0.0)", "langchain-openai (>=0.3.14,<0.4.0)", "langchain-anthropic (>=0.3.12,<0.4.0)", "pydantic (>=2.11.3,<3.0.0)", "pygithub (>=2.6.1,<3.0.0)", "requests (>=2.32.3,<3.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
